<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/about"
          android:title="@string/action_about"
          android:orderInCategory="102"
          app:showAsAction="never"/>
</menu>
